--- a/DientesLimpios.Pruebas/DientesLimpios.Pruebas.csproj
+++ b/DientesLimpios.Pruebas/DientesLimpios.Pruebas.csproj
@@ -8,11 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="MSTest" Version="3.6.4" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageReference Include="MSTest" Version="3.10.5" />
+    <PackageReference Include="NSubstitute" Version="5.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DientesLimpios.Aplicacion\DientesLimpios.Aplicacion.csproj" />
     <ProjectReference Include="..\DientesLimpios.Dominio\DientesLimpios.Dominio.csproj" />
   </ItemGroup>
 
